--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </div> <!--.row-->
     </div><!--.container-->
 
-    <script src="js/app.js" type="module"></script>
+    <script src="js/app.js"></script>
 
 </body>
 </html>
